{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 34,
  "lineage": "91f8d964-c0b9-4aec-e598-5c3d603feb11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a2533766b7d5b1a",
            "arn": "arn:aws:ec2:ap-south-1:718409214934:elastic-ip/eipalloc-00a2533766b7d5b1a",
            "association_id": "eipassoc-0a4e8289ea0da3cd6",
            "domain": "vpc",
            "id": "eipalloc-00a2533766b7d5b1a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0607eb507745b584d",
            "private_dns": "ip-10-0-1-157.ap-south-1.compute.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-13-234-73-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.73.53",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-nat-eip",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-nat-eip",
              "Project": "blue-green-deployment-platform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "eipalloc-00a2533766b7d5b1a",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:internet-gateway/igw-04213014e373f4cf5",
            "id": "igw-04213014e373f4cf5",
            "owner_id": "718409214934",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-igw",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-igw",
              "Project": "blue-green-deployment-platform"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "igw-04213014e373f4cf5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a2533766b7d5b1a",
            "association_id": "eipassoc-0a4e8289ea0da3cd6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d05342763bc9c08f",
            "network_interface_id": "eni-0607eb507745b584d",
            "private_ip": "10.0.1.157",
            "public_ip": "13.234.73.53",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e174447f67ff584d",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-nat-gateway",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-nat-gateway",
              "Project": "blue-green-deployment-platform"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "nat-0d05342763bc9c08f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:route-table/rtb-0533371aa48bdc960",
            "id": "rtb-0533371aa48bdc960",
            "owner_id": "718409214934",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d05342763bc9c08f",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-private-rt",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-private-rt",
              "Project": "blue-green-deployment-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtb-0533371aa48bdc960",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:route-table/rtb-08f6e3ea7d3c92851",
            "id": "rtb-08f6e3ea7d3c92851",
            "owner_id": "718409214934",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04213014e373f4cf5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-public-rt",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-public-rt",
              "Project": "blue-green-deployment-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtb-08f6e3ea7d3c92851",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2bb6ede3519669f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533371aa48bdc960",
            "subnet_id": "subnet-0f6887bbc0dcfc5b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtbassoc-0b2bb6ede3519669f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078fcbd0945653d75",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533371aa48bdc960",
            "subnet_id": "subnet-0b8f28bc4970130e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtbassoc-078fcbd0945653d75",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04895c00aec8a0fbd",
            "region": "ap-south-1",
            "route_table_id": "rtb-08f6e3ea7d3c92851",
            "subnet_id": "subnet-0e174447f67ff584d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtbassoc-04895c00aec8a0fbd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010e88c51bfc74a0f",
            "region": "ap-south-1",
            "route_table_id": "rtb-08f6e3ea7d3c92851",
            "subnet_id": "subnet-054e0c3fe913039c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "rtbassoc-010e88c51bfc74a0f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:security-group/sg-0f1be0d69fd6df3ff",
            "description": "Security group for the blue-green EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1be0d69fd6df3ff",
            "ingress": [],
            "name": "blue-green-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "718409214934",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-eks-cluster-sg",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-eks-cluster-sg",
              "Project": "blue-green-deployment-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "sg-0f1be0d69fd6df3ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:subnet/subnet-0f6887bbc0dcfc5b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6887bbc0dcfc5b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718409214934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-private-1",
              "Project": "blue-green-deployment-platform",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-private-1",
              "Project": "blue-green-deployment-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "subnet-0f6887bbc0dcfc5b5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:subnet/subnet-0b8f28bc4970130e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8f28bc4970130e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718409214934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-private-2",
              "Project": "blue-green-deployment-platform",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-private-2",
              "Project": "blue-green-deployment-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "subnet-0b8f28bc4970130e9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:subnet/subnet-0e174447f67ff584d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e174447f67ff584d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718409214934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-public-1",
              "Project": "blue-green-deployment-platform",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-public-1",
              "Project": "blue-green-deployment-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "subnet-0e174447f67ff584d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:subnet/subnet-054e0c3fe913039c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e0c3fe913039c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718409214934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-public-2",
              "Project": "blue-green-deployment-platform",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-public-2",
              "Project": "blue-green-deployment-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-0e48d3501471314ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "subnet-054e0c3fe913039c2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:718409214934:vpc/vpc-0e48d3501471314ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eaeff4c4b71205bb",
            "default_route_table_id": "rtb-024acf9bc00cec446",
            "default_security_group_id": "sg-021bf8362e914896f",
            "dhcp_options_id": "dopt-0fee5490dc38a38f4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e48d3501471314ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024acf9bc00cec446",
            "owner_id": "718409214934",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "blue-green-vpc",
              "Project": "blue-green-deployment-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blue-green-vpc",
              "Project": "blue-green-deployment-platform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718409214934",
            "id": "vpc-0e48d3501471314ff",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}